Wed Sep 22 20:17:31 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* p-group-by.rb: REQ253対応

Wed Sep 22 00:54:28 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* REQ251対応:(test 42全て完了)

Tue Sep 21 19:18:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-local-file-input.rb: BUG#252対応

Sun Sep 19 00:06:31 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* REQ251対応:(test 42まで完了)

Sat Sep 18 23:04:52 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* REQ251対応:(test 5まで完了)

Sat Sep 18 22:29:55 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* REQ251対応:(test 1まで完了)

Sat Sep 18 21:21:51 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* p-zip.rb -> p-seg-zip.rb

Sat Sep 18 21:20:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/node/*.rb: REQ251対応完了

Sat Sep 18 19:43:20 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-output-varray.rb -> p-output-varray.rb

Sat Sep 18 19:41:29 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/master/*.rb: REQ251対応完了
	* basic-group-by.rb, file-place.rb: REQ251対応

Sat Sep 18 18:36:33 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/client/*.rb: REQ251対応完了

Sat Sep 18 00:36:03 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* barrier.rb, basic-group-by.rb, cat.rb, direct-product.rb,
	  equijoin.rb, exec.rb,filter.rb, find.rb, group-by.rb, here.rb,
	  inject.rb, input-file.rb, input-iota.rb, input-local-file.rb,
	  input-varray.rb, input.rb: REQ251対応
	* {,c-,p-}iofilter.rb -> {,c-,p-}io-filter.rb

Fri Sep 17 23:17:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/main/*: REQ251対応完了

Fri Sep 17 22:12:04 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/fairy.rb, lib/fairy/app/*: REQ251対応完了

Fri Sep 17 22:06:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy{-cat,cp,rm}: REQ251対応完了

Fri Sep 17 21:45:07 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/{master,...}をlib/fairy/app以下に移動
	* lib/{master.rb,..}をlib/fairy/main以下に移動
