@@ -1,0 +1,114 @@
+#						-*- ruby -*-
+# encoding: UTF-8
+
+module Fairy
+
+## Double sharp comment is a system default value.
+
+##CONF.RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby" 
+
+##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
+CONF.MASTER_HOST = NO SYSTEM DEFAULT VALUE
+
+##CONF.MASTER_PORT = "19999"
+
+##CONF.HOME = ENV["FAIRY_HOME"]
+##CONF.BIN = CONF.HOME+"/bin" 
+##CONF.LIB = CONF.HOME+"/lib"
+##CONF.LIB_APP = CONF.LIB+"/app"
+##CONF.CONTROLLER_APP = CONF.LIB_APP+"/controller"
+##CONF.PROCESSOR_APP = CONF.LIB_APP+"/processor"
+
+##CONF.DEFAULT_EXTERNAL = nil
+##CONF.DEFAULT_INTERNAL = nil
+
+##CONF.IGNORE_EXCEPTION_ON_FILTER = false
+
+##CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
+##CONF.CONTROLLER_INPUT_PROCESSOR_N = 10
+
+## 生成されるプロセッサの上限. nilなら無制限. 
+##CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR = 4
+
+##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
+
+##  CONF.POSTMAPPING_POLICY = nil
+
+##CONF.PREQUEUING_POLICY = {:queuing_class => :FileMarshaledQueue}
+##CONF.POSTQUEUING_POLICY = {:queuing_class => :FileMarshaledQueue}
+
+##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 100000
+##CONF.POOLQUEUE_POOL_THRESHOLD = 10000
+
+##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
+##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+
+##CONF.MARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
+##CONF.MARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
+##CONF.SIZEDMARSHAL_QUEUE_MAX_CHUNK_NO = 10
+
+##CONF.SORTEDQUEUE_POOL_THRESHOLD = CONF.POOLQUEUE_POOL_THRESHOLD
+##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
+##CONF.SORTEDQUEUE_SORTBY = %{|v| v}
+
+##CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
+##CONF.HERE_POOL_THRESHOLD = 32000
+##CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
+
+##CONF.N_MOD_GROUP_BY = 4
+
+##CONF.HASH_MODULE = "fairy/share/hash-md5"
+##CONF.HASH_OPTIMIZE = false
+
+##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :DirectMergeSortBuffer}
+##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400_000
+##CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 1000
+
+##CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
+##CONF.SORT_BUFFERING_POLICY = {:buffering_class => "PGroupBy::DirectMergeSortBuffer"}
+##CONF.SORT_SAMPLING_MIN = 100
+##CONF.SORT_SAMPLING_MAX = 10000
+##CONF.SORT_SAMPLING_RATIO_1_TO = 100
+##CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
+# CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
+
+##CONF.IOTA_SPLIT_NO = 4
+
+##CONF.TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE = false
+
+##CONF.VF_ROOT = CONF.HOME+"/Repos"
+##CONF.VF_PREFIX = `hostname`.chomp 
+#- CONF.VF_PREFIX use client setting.
+#  (ja_JP.utf-8: CONF.VF_PREFIXはクライアントのものが使われる)
+
+##CONF.VF_SPLIT_SIZE = 64*1024*1024
+
+##CONF.TMP_DIR = "/tmp/fairy/tmpbuf"
+
+##CONF.LOG_FILE = "/tmp/fairy/log"
+##CONF.LOG_FLUSH_INTERVAL = 1
+##CONF.LOG_LEVEL = :DEBUG
+##CONF.LOG_IMPORT_NTIMES_POP = 100000
+##CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
+
+##  CONF.PROCESSOR_MON_ON = false
+##  CONF.PROCESSOR_MON_INTERVAL = 300
+##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
+##  CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
+
+##CONF.SOCK_DO_NOT_REVERSE_LOOKUP = true
+##CONF.USE_RESOLV_REPLACE = false
+
+##CONF.BLOCK_USE_STDOUT = false
+
+##CONF.DEBUG_PORT_WAIT = false
+##CONF.DEBUG_FULL_BACKTRACE = false
+##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
+##CONF.DEBUG_MONITOR_ON = false
+##CONF.DEBUG_PROCESSOR_TRACE_ON = false
+##CONF.DEBUG_BUG49 = false
+
+##CONF.BUG234 = false
+
+##CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
+end
