@@ -274,8 +274,8 @@ module Fairy
 
   DEFAULT_CONF.POSTMAPPING_POLICY = nil
 
-  DEFAULT_CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedSizedPoolQueue}
-  DEFAULT_CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedFileBufferdQueue}
+  DEFAULT_CONF.PREQUEUING_POLICY = {:queuing_class => :FileMarshaledQueue}
+  DEFAULT_CONF.POSTQUEUING_POLICY = {:queuing_class => :FileMarshaledQueue}
 
   DEFAULT_CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 100000
   DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD = 10000
@@ -285,7 +285,6 @@ module Fairy
   DEFAULT_CONF.MARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.MARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.SIZEDMARSHAL_QUEUE_MAX_CHUNK_NO = 10
-
   
   DEFAULT_CONF.SORTEDQUEUE_POOL_THRESHOLD = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.SORTEDQUEUE_THRESHOLD = 10000/2
@@ -295,13 +294,13 @@ module Fairy
   DEFAULT_CONF.HERE_POOL_THRESHOLD = 32000
   DEFAULT_CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
-  DEFAULT_CONF.N_MOD_GROUP_BY = 5
+  DEFAULT_CONF.N_MOD_GROUP_BY = 4
   DEFAULT_CONF.HASH_MODULE = "fairy/share/hash-md5"
   DEFAULT_CONF.HASH_OPTIMIZE = false
 
-  DEFAULT_CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
-  DEFAULT_CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100_000
-  DEFAULT_CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 10000
+  DEFAULT_CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :DirectMergeSortBuffer}
+  DEFAULT_CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400_000
+  DEFAULT_CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 1000
 
   DEFAULT_CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 
@@ -313,7 +312,7 @@ module Fairy
 
   DEFAULT_CONF.IOTA_SPLIT_NO = 4
 
-  DEFAULT_CONF.TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE = true
+  DEFAULT_CONF.TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE = false
 
 #  DEFAULT_CONF.VF_ROOT = DEFAULT_CONF.HOME+"/Repos"
   DEFAULT_CONF.VF_PREFIX = `hostname`.chomp
@@ -330,14 +329,14 @@ module Fairy
   DEFAULT_CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
 
   DEFAULT_CONF.PROCESSOR_MON_ON = false
-  DEFAULT_CONF.PROCESSOR_MON_INTERVAL = 60
+  DEFAULT_CONF.PROCESSOR_MON_INTERVAL = 300
   DEFAULT_CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
   DEFAULT_CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
   DEFAULT_CONF.SOCK_DO_NOT_REVERSE_LOOKUP = true
   DEFAULT_CONF.USE_RESOLV_REPLACE = false
 
-  DEFAULT_CONF.BLOCK_USE_STDOUT = true
+  DEFAULT_CONF.BLOCK_USE_STDOUT = false
 
   DEFAULT_CONF.DEBUG_PORT_WAIT = false
   DEFAULT_CONF.DEBUG_FULL_BACKTRACE = false
